@@ -9,7 +9,7 @@ files="f s.f"
 
 remove $files
 
-docommand y1 "${val} ../year-2000/s.y2k.txt" 0 IGNORE IGNORE
+docommand y1 "${vg_val} ../year-2000/s.y2k.txt" 0 IGNORE IGNORE
 
 remove $files
 success
